# amaranth

./: .codecov.yml  .coveragerc  .editorconfig  .env.toolchain  .gitattributes  .gitignore  .mailmap  .travis.yml  CLAUDE.md  CONTRIBUTING.txt  LICENSE.txt  README.md  fix_rst_bullet_lists.py  fix_rst_underlines.py  pdm_build.py  pyproject.toml  setup.cfg  setup.py  tutorial.md
.github/: CODEOWNERS
.github/workflows/: main.yaml  tutorial-comprehension-test.yml  tutorial-execution-test.yml  tutorial-test.yml
amaranth/: __init__.py  _unused.py  _utils.py  asserts.py  cli.py  rpc.py  tracer.py  utils.py
amaranth/_toolchain/: cxx.py  yosys.py
amaranth/back/: cxxrtl.py  pysim.py  rtlil.py  verilog.py
amaranth/compat/: __init__.py
amaranth/compat/fhdl/: bitcontainer.py  decorators.py  module.py  specials.py  structure.py
amaranth/compat/genlib/: cdc.py  coding.py  fifo.py  fsm.py  record.py  resetsync.py  roundrobin.py
amaranth/compat/sim/: __init__.py
amaranth/hdl/: __init__.py  _ast.py  _cd.py  _dsl.py  _ir.py  _mem.py  _nir.py  _rec.py  _repr.py  _time.py  _xfrm.py  ast.py  cd.py  dsl.py  ir.py  mem.py  rec.py  xfrm.py
amaranth/lib/: cdc.py  coding.py  data.py  enum.py  fifo.py  fixed.py  io.py  memory.py  meta.py  scheduler.py  stream.py  strobegen.py  wiring.py
amaranth/lib/crc/: __init__.py  catalog.py
amaranth/sim/: __init__.py  _async.py  _base.py  _coverage.py  _cxxrtl.py  _pyclock.py  _pycoro.py  _pyeval.py  _pyrtl.py  _sched.py  _test_base.py  _vcdwriter.py  core.py  cxxsim.py  pysim.py  test_vcd_writer.py  trace.py
amaranth/test/: __init__.py  utils.py
amaranth_cli/: __init__.py
doc/: COMPAT_SUMMARY.md
docs/: .gitignore  Glossary  buildsys.rst  changes.rst  conf.py  contrib.rst  cover.rst  glossary.rst  guide.rst  index.rst  install.rst  intro.rst  lang.rst  platform.rst  reference.rst  requirements.txt  simulator.rst  start.rst  stdlib.rst  tutorial.rst
docs/_code/: and_gate.py  blinky.py  controlled_blinker.py  led_blinker.py  program_icestick.py  uart_receiver.py  uart_sim.py  up_counter.py  up_counter.v
docs/_historical/: COMPAT_SUMMARY.md  PROPOSAL.md
docs/_static/: custom.css  version-switch.js
docs/buildsys/: dsl.rst
docs/platform/: altera.rst  gowin.rst  intel.rst  lattice-ecp5.rst  lattice-ice40.rst  lattice-machxo-2-3l.rst  lattice.rst  quicklogic.rst  siliconblue.rst  xilinx.rst
docs/stdlib/: cdc.rst  coding.rst  crc.rst  data.rst  enum.rst  fifo.rst  io.rst  memory.rst  meta.rst  stream.rst  wiring.rst
docs/stdlib/crc/: catalog.rst
docs/tools/: README.md
examples/: Blinky.py  alu.py  alu_hier.py  arst.py  blinky.py  cdc.py  clkdiv.py  ctr.py  ctr_ce.py  ctrl.py  fsm.py  gpio.py  inst.py  mem.py  pmux.py  por.py  tbuf.py
examples/basic/: alu.py  alu_hier.py  arst.py  cdc.py  ctr.py  ctr_ce.py  ctr_en.py  fsm.py  gpio.py  inst.py  mem.py  pipeline.py  pmux.py  por.py  sel.py  uart.py
examples/board/: 01_blinky.py  02_domain.py  blinky.py
nmigen/: __init__.py  _toolchain.py  _tools.py  _utils.py  _version.py  _yosys.py  asserts.py  cli.py  formal.py  rpc.py  tools.py  tracer.py  utils.py
nmigen/_toolchain/: __init__.py  cxx.py  yosys.py
nmigen/back/: __init__.py  cxxrtl.py  dot.py  firrtl.py  json.py  pysim.py  rtlil.py  show.py  verilog.py
nmigen/compat/: __init__.py
nmigen/compat/fhdl/: __init__.py  bitcontainer.py  conv_output.py  decorators.py  module.py  specials.py  structure.py  verilog.py
nmigen/compat/genlib/: __init__.py  cdc.py  coding.py  fifo.py  fsm.py  misc.py  record.py  resetsync.py  roundrobin.py
nmigen/compat/sim/: __init__.py
nmigen/fhdl/: __init__.py  ast.py  cd.py  dsl.py  ir.py  xfrm.py
nmigen/genlib/: cdc.py  io.py
nmigen/hdl/: __init__.py  ast.py  cd.py  dsl.py  ir.py  mem.py  rec.py  xfrm.py
nmigen/lib/: __init__.py  cdc.py  clock.py  coding.py  fifo.py  io.py  roundrobin.py  scheduler.py
nmigen/sim/: __init__.py  _cmds.py  _core.py  _pyclock.py  _pycoro.py  _pyrtl.py  core.py  pysim.py
nmigen/test/: __init__.py  test_build_dsl.py  test_build_plat.py  test_build_res.py  test_compat.py  test_examples.py  test_fhdl.py  test_fhdl_ast.py  test_fhdl_cd.py  test_fhdl_dsl.py  test_fhdl_ir.py  test_fhdl_value.py  test_fhdl_values.py  test_fhdl_xfrm.py  test_hdl_ast.py  test_hdl_cd.py  test_hdl_dsl.py  test_hdl_ir.py  test_hdl_mem.py  test_hdl_rec.py  test_hdl_xfrm.py  test_lib_cdc.py  test_lib_coding.py  test_lib_fifo.py  test_lib_io.py  test_lib_roundrobin.py  test_lib_scheduler.py  test_sim.py  tools.py  utils.py
nmigen/test/compat/: support.py  test_coding.py  test_constant.py  test_fifo.py  test_fsm.py  test_passive.py  test_run_simulation.py  test_signed.py  test_size.py
tests/: test_back_rtlil.py  test_base.py  test_build_dsl.py  test_build_plat.py  test_build_res.py  test_compat.py  test_coverage.py  test_examples.py  test_hdl_ast.py  test_hdl_cd.py  test_hdl_dsl.py  test_hdl_ir.py  test_hdl_mem.py  test_hdl_rec.py  test_hdl_time.py  test_hdl_xfrm.py  test_lib_cdc.py  test_lib_coding.py  test_lib_crc.py  test_lib_data.py  test_lib_enum.py  test_lib_fifo.py  test_lib_fixed.py  test_lib_io.py  test_lib_memory.py  test_lib_meta.py  test_lib_scheduler.py  test_lib_stream.py  test_lib_wiring.py  test_sim.py  test_toolchain_cxx.py  test_tracer.py  test_utils.py  utils.py
tests/compat/: support.py  test_coding.py  test_constant.py  test_fifo.py  test_fsm.py  test_passive.py  test_run_simulation.py  test_signed.py  test_size.py
