[bdist_wheel]
universal=1

[metadata]
name = nmigen
author = whitequark
author_email = whitequark@whitequark.org
description = Python toolbox for building complex digital hardware
license = BSD
project_urls =
    Source Code=https://github.com/nmigen/nmigen
    Bug Tracker=https://github.com/nmigen/nmigen/issues

[options]
python_requires = ~=3.6
install_requires =
    pyvcd~=0.2.0  # for nmigen.pysim
    Jinja2~=2.11  # for nmigen.build
packages = find:

[options.entry_points]
console_scripts =
    nmigen-rpc = nmigen.rpc:main
